menu fixed on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -5928,7 +5928,7 @@ Created using IcoMoon - icomoon.io
     }
   }
   .sidebar-collapse [class*="navbar-expand-"] .navbar-collapse {
-    width: 300px;
+    width: 170px;
   }
   .sidebar-collapse .wrapper {
     -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -5953,7 +5953,7 @@ Created using IcoMoon - icomoon.io
     right: auto;
     left: 0;
     -webkit-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0);
+    transform: translate3d(-170px, 0, 0);
   }
   .nav-open .sidebar-collapse .navbar-collapse {
     -webkit-transform: translate3d(0px, 0, 0);
@@ -5965,7 +5965,7 @@ Created using IcoMoon - icomoon.io
   }
   .nav-open .sidebar-collapse .navbar-translate {
     -webkit-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0);
+    transform: translate3d(-170px, 0, 0);
   }
   .nav-open .sidebar-collapse.menu-on-left .navbar-collapse {
     -webkit-transform: translate3d(0px, 0, 0);
